--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
